# visua

./: generate-clean.bat  generate.bat
src/: CMakeLists.txt
src/01-simple-glfw/: CMakeLists.txt  main.cpp
src/02-2d-plot/: CMakeLists.txt  main.cpp
src/02-3d-gauss/: CMakeLists.txt  main.cpp
src/02-opengl-primitives/: CMakeLists.txt  main.cpp
src/03-3d-plot/: CMakeLists.txt  main.cpp
src/04-shaders/: CMakeLists.txt  main.cpp  shader.cpp  simple.frag  simple.vert
src/04-texture-mapping/: CMakeLists.txt  controls.cpp  controls.hpp  main.cpp  shader.cpp  shader.hpp  texture.cpp  texture.frag  texture.hpp  transform.vert
